Adding the red border to the password field when the password is invalid

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -5,4 +5,4 @@
     description: For security reasons, your session has been expired. Please, type your password below.
     button: Send
     errors:
-      invalid_password: Invalid password.
+      invalid_password: Invalid password
