--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -2,7 +2,7 @@
 "pt-BR":
   cross_lockable:
     title: Session locked!
-    description: For security reasons, your session has been expired. Please, type your password below.
+    description: "For security reasons, your session has been expired.<br>Please, type your password below."
     button: Send
     errors:
       invalid_password: Invalid password
